06-04-11 Rene Fritz  <r.fritz@colorcube.de>

	* Fix: Set indexing run type properly: cron

06-04-07 Rene Fritz  <r.fritz@colorcube.de>

	* 1.0 release