@@ -153,6 +153,9 @@ $rec = $this->modifyValuesForDisplay($rec);
 
 				$path = tx_dam::path_makeAbsolute($this->pObj->path);
 
+
+				$content .= '</form>';
+				$content .= $this->pObj->doc->form;
 				if (is_file($path.$filename) AND is_readable($path.$filename)) {
 
 					$content.= '<br /><strong>Overwrite existing default indexer setup to this folder:</strong><br />'.htmlspecialchars($this->pObj->path).'<br />';
@@ -171,9 +174,10 @@ $rec = $this->modifyValuesForDisplay($rec);
 				$content.= $this->pObj->doc->section('CRON','',0,1);
 
 				$path = PATH_site.$this->uploadFolder;
-				$filename = preg_replace('#[^a-zA-Z0-9]#','_',$this->pObj->path);
-				$filename = preg_replace('#_$#','',$filename);
-				$filename = preg_replace('#^_#','',$filename);
+
+				$filename = $this->makeSetupfilenameForPath($this->pObj->path);
+				$content .= '</form>';
+				$content .= $this->pObj->doc->form;
 				$content.= '<br /><strong>Save setup as cron indexer setup:</strong><br />'.htmlspecialchars($path).'<br /><input type="text" size="25" maxlength="25" name="filename" value="'.htmlspecialchars($filename).'"> .xml';
 				$content.= '<br /><input type="submit" name="indexSave" value="Save" />';
 
@@ -217,7 +221,9 @@ $rec = $this->modifyValuesForDisplay($rec);
 					$filename = $path.'.indexing.setup.xml';
 				} else {
 					$path = PATH_site.$this->uploadFolder;
-					$filename = $path.t3lib_div::_GP('filename').'.xml';
+					$filename = t3lib_div::_GP('filename');
+					$filename = $filename ? $filename : $this->makeSetupfilenameForPath($this->pObj->path);
+					$filename = $path.$filename.'.xml';
 				}
 
 				$this->index->setPath($this->pObj->path);
@@ -229,7 +235,9 @@ $rec = $this->modifyValuesForDisplay($rec);
 				$setup = $this->index->serializeSetup($extraSetup);
 
 				if ($handle = fopen($filename, 'wb')) {
-					if (!fwrite($handle, $setup)) {
+					if (fwrite($handle, $setup)) {
+						 $content.= 'Setup written to file<br />'.htmlspecialchars($filename);
+					} else {
 						 $content.= 'Can\'t write to file '.htmlspecialchars($filename);
 					}
 					fclose($handle);
@@ -279,7 +287,18 @@ $rec = $this->modifyValuesForDisplay($rec);
 	}
 
 
-
+	/**
+	 * Creates a filename for a setup from pathname
+	 *
+	 * @param string $path path
+	 * @return string filename
+	 */
+	function makeSetupfilenameForPath($path) {
+		$filename = preg_replace('#[^a-zA-Z0-9]#','_',$path);
+		$filename = preg_replace('#_$#','',$filename);
+		$filename = preg_replace('#^_#','',$filename);
+		return $filename;
+	}
 
 // TODO -------------- quick fix - needs to be done right
 
